--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,10 @@ body {
   position: sticky;
   top: 0;
   z-index: 1000;
+}
+.navbar a {
   text-decoration: none;
 }
-
 .logo {
   font-weight: bold;
   font-size: 1.5rem;
